package refactored;

public enum MovieState {
    REGULAR,
    NEW_RELEASE,
    CHILDRENS
}
